sumo/tests/sumo/pedestrian_model/striping/errors/disconnected_trip/errors.sumo
Warning: No connection between 'SC_fwd_connector' and 'CW_bwd_connector' found.
Error: No connection found between 'SC' and 'CW' for person 'p0'.
Error: No edges to walk for person 'p0'.
Quitting (on error).
